@@ -12,6 +12,10 @@ configure_file(
     ${CMAKE_BINARY_DIR}/man/man1/dbt2-run.1.rst
 )
 configure_file(
+    dbt2-report.1.rst.in
+    ${CMAKE_BINARY_DIR}/man/man1/dbt2-report.1.rst
+)
+configure_file(
     dbt2-run.1.rst.in
     ${CMAKE_BINARY_DIR}/man/man1/dbt2-run.1.rst
 )
@@ -25,6 +29,10 @@ execute_process(
     OUTPUT_FILE ${CMAKE_BINARY_DIR}/man/man1/dbt2-build.1
 )
 execute_process(
+    COMMAND rst2man.py ${CMAKE_BINARY_DIR}/man/man1/dbt2-report.1.rst
+    OUTPUT_FILE ${CMAKE_BINARY_DIR}/man/man1/dbt2-report.1
+)
+execute_process(
     COMMAND rst2man.py ${CMAKE_BINARY_DIR}/man/man1/dbt2-run.1.rst
     OUTPUT_FILE ${CMAKE_BINARY_DIR}/man/man1/dbt2-run.1
 )
@@ -32,6 +40,7 @@ execute_process(
 install(
     FILES ${CMAKE_BINARY_DIR}/man/man1/dbt2.1
           ${CMAKE_BINARY_DIR}/man/man1/dbt2-build.1
+          ${CMAKE_BINARY_DIR}/man/man1/dbt2-report.1
           ${CMAKE_BINARY_DIR}/man/man1/dbt2-run.1
     DESTINATION "share/man/man1"
 )
