@@ -1,40 +1,0 @@
-#!/bin/sh
-#
-# This file is released under the terms of the Artistic License.
-# Please see the file LICENSE, included in this package, for details.
-#
-# Copyright The DBT-2 Authors
-#
-
-if [ "$DBT2LANG" = "" ]; then
-	# Ordered preference of which language usually runs faster.
-	if which "sqlite3" > /dev/null 2>&1; then
-		DBT2LANG="sqlite3"
-	elif which "R" > /dev/null 2>&1; then
-		DBT2LANG="R"
-	else
-		echo "ERROR: 'sqlite3' nor 'R' not detected for post processing"
-		exit 1
-	fi
-else
-	if ! which "$DBT2LANG" > /dev/null 2>&1; then
-		echo "ERROR: $DBT2LANG not detected, set to 'sqlite3' or 'R', or unset"
-		echo "to let the script autodetect"
-		exit 1
-	fi
-fi
-
-if [ "$DBT2LANG" = "R" ]; then
-	PPEXT="r"
-elif [ "$DBT2LANG" = "sqlite3" ]; then
-	PPEXT="sql"
-fi
-
-PPSCRIPT="dbt2-post-process.${PPEXT}"
-
-if ! which "$PPSCRIPT" > /dev/null 2>&1; then
-		echo "ERROR: $PPSCRIPT not found in PATH"
-		exit 1
-fi
-
-"$PPSCRIPT" "$@"
